# C-vcpkg-and-cmake-template

./: .gitignore  CMakeLists.txt  README.md  app  build.sh  clean.sh  makefile
